Message Board Done.

--- a/app/pages/main/events/event/event-brackets/bracketimage.html
+++ b/app/pages/main/events/event/event-brackets/bracketimage.html
@@ -1,6 +1,6 @@
 <ion-header>
     <ion-navbar primary no-border-bottom>
-       <ion-title>{{DivisionName}}</ion-title>
+      <!-- <ion-title>{{DivisionName}}</ion-title>-->
         <ion-buttons end>
             <button (click)="goToMenuPage()">
                  <ion-icon ios="ios-swap" md="md-swap"></ion-icon>
@@ -13,4 +13,5 @@
 <ion-content>
   <div [innerHTML]="bracket">
   </div>
+ 
 </ion-content>
