--- a/app/pages/main/message-board/compose/reply/reply.html
+++ b/app/pages/main/message-board/compose/reply/reply.html
@@ -8,7 +8,7 @@
             </button>
         </ion-buttons>
 
-        <ion-title>Compose Message</ion-title>
+        <ion-title>Reply Message</ion-title>
 
         <ion-buttons end>
             <button (click)="compose()">
@@ -24,20 +24,8 @@
 
     <ion-card>
         <ion-list>
-            <ion-item (click)="goToSelectTeamPage()">
-                <ion-avatar class="A-5" item-left>
-                    <img src="team-logos/spartans.jpeg" alt="">
-                </ion-avatar>
-                <h2>{{TeamName}}</h2>
-            </ion-item >
-
             <ion-item>
-                <ion-label floating>Subject</ion-label>
-                <ion-input [(ngModel)]="subject" type="text"></ion-input>
-            </ion-item>
-
-            <ion-item>
-                <ion-label floating>Message</ion-label>
+                <ion-label stacked>Message</ion-label>
                 <ion-textarea  [(ngModel)]="message" rows="10"></ion-textarea>
             </ion-item>
 
