--- a/app/pages/main/tabs/main-tabs.html
+++ b/app/pages/main/tabs/main-tabs.html
@@ -1,4 +1,4 @@
-<ion-tabs>
+<ion-tabs #myTabs>
     <ion-tab [root]="HomeTab" tabIcon="home" tabTitle="Home"></ion-tab>
     <ion-tab [root]="EventsTab" tabIcon="albums" tabTitle="Events"></ion-tab>
     <ion-tab [root]="MessageBoardTab" tabIcon="chatboxes" tabTitle="Message Board" tabBadge="3" tabBadgeStyle="danger"></ion-tab>
