--- a/app/pages/main/events/event/event-info/event-info.html
+++ b/app/pages/main/events/event/event-info/event-info.html
@@ -66,5 +66,5 @@
             </ion-list>
         </ion-card>
     </div>
-
+ <ion-spinner name="bubbles"  style="display:block;margin:auto"  [style.visibility]="dataLoading? 'visible' : 'hidden'"></ion-spinner>
 </ion-content>
