--- a/www/index.html
+++ b/www/index.html
@@ -10,8 +10,12 @@
   <link ios-href="build/css/app.ios.css" rel="stylesheet">
   <link md-href="build/css/app.md.css" rel="stylesheet">
   <link wp-href="build/css/app.wp.css" rel="stylesheet">
+
+    <!--load fonts from typekit kit-->
+  <script src="https://use.typekit.net/irp3hct.js"></script>
+  <script>try{Typekit.load({ async: true });}catch(e){}</script>
 </head>
-<body>
+<body class="platform-ios">
 
   <!-- This is Ionic's root component, where the app will load -->
   <ion-app></ion-app>
@@ -93,19 +97,20 @@
         </main>
     </div>
   </script>
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
   <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
   <script src="build/js/external-libraries.js"></script>
   <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Intl.~locale.en"></script>
-  <!-- cordova.js required for cordova apps -->
-  <script src="cordova.js"></script>
+ 
   <!-- Polyfill needed for platforms without Promise and Collection support -->
   <script src="build/js/es6-shim.min.js"></script>
-   <script  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDhdg0uvXqHQ8P1LsRe_f3UwzXgZFFwAqo"
-  type="text/javascript"></script>
+  <script  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDhdg0uvXqHQ8P1LsRe_f3UwzXgZFFwAqo" type="text/javascript"></script>
   <!-- Zone.js and Reflect-metadata  -->
   <script src="build/js/Reflect.js"></script>
   <script src="build/js/zone.js"></script>
+
+   <!-- cordova.js required for cordova apps -->
+  <script src="cordova.js"></script>
   <!-- The bundle which is built from the app's source code -->
   <script src="build/js/app.bundle.js"></script>
 </body>
