Changes to Message Board and Login API call.

--- a/app/pages/main/home/home.html
+++ b/app/pages/main/home/home.html
@@ -70,7 +70,7 @@
                     </ion-thumbnail>
                     <h2 title>{{(followedplayer.CustodianPlayer.FirstName|title) + " " + (followedplayer.CustodianPlayer.LastName|title)}}</h2>
                     <h3>{{followedplayer.CustodianPlayer.TeamName}}</h3>
-                    <p class="pos"><b>#{{followedplayer.CustodianPlayer.JerseyNumber}}</b> | {{followedplayer.CustodianPlayer.Position|title}}</p>
+                    <p class="pos"><b>#{{followedplayer.CustodianPlayer.JerseyNumber}}</b> | {{followedplayer.CustodianPlayer.Position}}</p>
                     <!--<p class="pos"><b>&nbsp;ID:</b> H34J7L</p>-->
                     <!--<p>8 Games Played | 4 Recorded</p>-->
                 </a>
